project/kuber_manifests/db_psql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql-db
spec:
  serviceName: psql-db-service
  replicas: 1
  selector:
    matchLabels:
      app: psql-db
  template:
    metadata:
      labels:	
        app: psql-db
    spec:
      containers:
      - name: psql-db
        image: postgres:16
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresql-db-disk
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: psql-pgdata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: psql-db-service
spec:
  selector:
    app: psql-db
  ports:
    - port: 5432
      targetPort: 5432
  type: NodePort
